--- a/style.css
+++ b/style.css
@@ -2,3 +2,116 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+	width: 100%;
+	font-family: 'poppins', sans-serif;
+}
+
+.header {
+	font-size: 24px;
+	text-align: center;
+	padding: 15px;
+}
+
+.container1 {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+}
+
+.book-list {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 90%;
+	border: 2px solid black;
+	padding: 0 12px;
+}
+
+.container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	gap: 30px;
+	width: 100%;
+	padding: 8px 12px;
+}
+
+.container li {
+	list-style-type: none;
+	font-weight: 600;
+}
+
+.sub-container {
+	display: flex;
+	gap: 10px;
+}
+
+.show {
+	background-color: #cacaca;
+}
+
+.container button {
+	padding: 4px 18px;
+	box-shadow: 3px 3px 5px;
+	background-color: #fff;
+}
+
+.container button:hover {
+	background-color: #e9e9e9;
+	transform: scale(1.015);
+}
+
+hr {
+	height: 2px;
+	margin-top: 30px;
+	width: 10%;
+	background-color: black;
+	border: none;
+	outline: none;
+	justify-content: center;
+	border-radius: 46px;
+}
+
+.form {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 20px;
+}
+
+form {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 30px;
+	gap: 7px;
+}
+
+form input {
+	width: 50%;
+	padding: 8px 8px;
+}
+
+form button {
+	padding: 4px 24px;
+	box-shadow: 3px 3px 5px;
+	background-color: #fff;
+}
+
+form button:hover {
+	background-color: #e9e9e9;
+	transform: scale(1.015);
+}
+
+.btncont {
+	width: 51%;
+	display: flex;
+	justify-content: flex-end;
+}
