--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-	max-height: 70%;
-	margin-bottom: 30px;
+  max-height: 70%;
+  margin-bottom: 30px;
 }
 
 .book-list {
@@ -29,8 +29,7 @@ body {
   align-items: center;
   width: 90%;
   border: 2px solid black;
-	margin-bottom: 20px;
-	margin-bottom: 20px;
+  margin-bottom: 20px;
   padding: 0 12px;
 }
 
@@ -91,13 +90,13 @@ hr {
 }
 
 .form {
-  display: flex;
+  display: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 20px;
-	height: 50vh;
-	gap: 40px;
+  height: 50vh;
+  gap: 40px;
 }
 
 form {
@@ -122,77 +121,97 @@ form input {
 }
 
 header {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	padding: 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
 }
 
 .header-container {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	width: 93%;
-	border: 2px solid black;
-	padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 93%;
+  border: 2px solid black;
+  padding: 10px 15px;
 }
 
 .navigation {
-	list-style-type: none;
-	display: flex;
-	gap: 20px;
+  list-style-type: none;
+  display: flex;
+  gap: 20px;
 }
 
 .textdec {
-	text-decoration: none;
-	font-size: 14px;
-	color: black;
-	font-weight: 600;
+  text-decoration: none;
+  font-size: 14px;
+  color: black;
+  font-weight: 600;
 }
 
 .separator {
-	border-left: 2px solid;
+  border-left: 2px solid;
 }
 
 .date-time {
-	font-size: 12px;
-	font-weight: 600;
-	display: flex;
-	justify-content: flex-end;
-	align-self: flex-end;
-	margin-right: 28px;
+  font-size: 12px;
+  font-weight: 600;
+  display: flex;
+  justify-content: flex-end;
+  align-self: flex-end;
+  margin-right: 28px;
 }
 
 footer {
-	padding: 15px;
-	display: flex;
-	justify-content: center;
-	background: #fff;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  background: #fff;
 }
 
 .copyright {
-	border: 2px solid black;
-	padding: 10px;
-	width: 93%;
-	position: fixed;
-	bottom: 0;
-	margin-bottom: 10px;
-	background: #fff;
+  border: 2px solid black;
+  padding: 10px;
+  width: 93%;
+  position: fixed;
+  bottom: 0;
+  margin-bottom: 10px;
+  background: #fff;
 }
 
 .copyright h3 {
-	font-size: 16px;
-}
-
-.form {
-	display: none;
+  font-size: 16px;
 }
 
 .blue {
-	color: blue;
+  color: blue;
 }
 
 .hr {
-	display: none;
+  display: none;
+}
+
+.contact {
+  align-items: center;
+  justify-content: center;
+  display: none;
+  height: 70vh;
+}
+
+.contact-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.contact h2 {
+  font-size: 30px;
+  margin-bottom: 50px;
+}
+
+.contact p {
+  font-size: 18px;
+  margin-bottom: 20px;
 }
